# Cloud-file-storage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/delete_handler/: lambda_function.py
backend/retrieve_handler/: lambda_function.py
backend/shared/: utils.py
backend/upload_handler/: lambda_function.py
ci-cd/: Jenkinsfile  pom.xml
ci-cd/scripts/: deploy.sh  healthcheck.sh  rollback.sh
frontend/: .dockerignore  .eslintrc.json  Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/api/: apiClient.ts
frontend/src/components/: FileList.tsx  FileUpload.tsx
frontend/src/hooks/: useFiles.ts  useUpload.ts
infrastructure/ansible/: playbook.yml
infrastructure/ansible/inventory/: dev
infrastructure/terraform/: cloudwatch.tf  iam.tf  main.tf
